# YAJAC

./: Cargo.toml  build.rs
src/: lib.rs  main.rs  resourceful.rs
src/adapter/: adapter.rs  cache.rs  context.rs  factories.rs  mod.rs  parameters.rs  uri_generator.rs
src/core/: adapter.rs  context.rs  data_loader.rs  error.rs  factories.rs  mod.rs
src/database/: attributes.rs  composite.rs  connection.rs  data_loader.rs  error.rs  mod.rs  pool.rs  query_builder.rs  query_parameters.rs  record.rs  registry.rs  relationships.rs  schema.rs  store.rs  table.rs
src/database/adapters/: mod.rs
src/database/adapters/sqlite/: connection.rs  migrator.rs  mod.rs  pool.rs  query_builder.rs  table.rs
src/database/data_loader/: load_context.rs  mod.rs  tests.rs
src/database/migrator/: builtin_migrations.rs  error.rs  migration.rs  mod.rs
src/error/: mod.rs
src/http_wrappers/: mod.rs  status_code.rs  uri.rs
src/json_api/: document.rs  error.rs  identifier.rs  links.rs  mod.rs  primary_content.rs  relationship.rs  resource.rs
src/parameters/: error.rs  mod.rs  query_parameters.rs  route_parameters.rs
src/resourceful/: mod.rs  related_data.rs  resourceful.rs
src/routing/: context.rs  controller.rs  error.rs  mod.rs  request.rs  responder.rs  result.rs  route_parameters.rs  router.rs  tests.rs  uri_generator.rs
src/routing/parameters/: mod.rs
src/spec/: document.rs  error.rs  links.rs  mod.rs  primary_content.rs  relationship.rs  resource.rs
