[package]
name = "yajac"
version = "0.1.0"
edition = "2024"

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
http = "1.1"
regex = "1.11"
urlencoding = "2.1.3"
indexmap = { version = "2.11", features = ["serde"] }
itertools = "0.14.0"
chrono = { version =  "0.4.42", features = ["serde"] }
log = "0.4.28"
rusqlite = { version = "0.37.0", features = ["chrono", "column_decltype", "serde_json"], optional = true }
include_dir = { version = "0.7.4", optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
sqlite = ["dep:rusqlite", "dep:base64"]
builtin_migrations = ["dep:include_dir"]
