[package]
name = "yajac"
version = "0.1.0"
edition = "2024"

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
http = "1.1"
regex = "1.11"
urlencoding = "2.1.3"
indexmap = { version = "2.11", features = ["serde"] }
itertools = "0.14.0"
chrono = { version =  "0.4.42", features = ["serde"] }
log = "0.4.28"
rusqlite = { version = "0.39.0", features = ["chrono", "column_decltype", "serde_json"], optional = true }
include_dir = { version = "0.7.4", optional = true }
base64 = { version = "0.22.1", optional = true }
colog = "1.4.0"
r2d2 = { version = "0.8.10", optional = true }
r2d2_sqlite = { version = "0.34.0", optional = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite", "dep:base64", "dep:r2d2", "dep:r2d2_sqlite"]
builtin_migrations = ["dep:include_dir"]
